@@ -1,3 +1,8 @@
+2008-03-20	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
+
+	* lib/src/lock_widget.cpp:
+	disable screen-saver while screen is locked (e.g. while fullscreen-demo)
+
 2008-03-19	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
 
 	* ica/ica.qrc:
